--- a/server/etherpad-lite/.gitignore
+++ b/server/etherpad-lite/.gitignore
@@ -28,3 +28,5 @@ playwright-report
 state.json
 /src/static/oidc
 canvas/
+/601a87ab7f81cdc9b59e24fbe404210502bc7766
+/node_modules/.pnpm/canvas@2.11.2/node_modules/canvas/build/Release/librsvg-2.so.2
