--- a/server/etherpad-lite/.gitignore
+++ b/server/etherpad-lite/.gitignore
@@ -27,6 +27,6 @@ plugin_packages
 playwright-report
 state.json
 /src/static/oidc
-/601a87ab7f81cdc9b59e24fbe404210502bc7766
-/node_modules/.pnpm/canvas@2.11.2/node_modules/canvas/build/Release/librsvg-2.so.2
-/node_modules
+601a87ab7f81cdc9b59e24fbe404210502bc7766
+node_modules/.pnpm/canvas@2.11.2/node_modules/canvas/build/Release/librsvg-2.so.2
+node_modules/
