--- a/server/etherpad-lite/.gitignore
+++ b/server/etherpad-lite/.gitignore
@@ -27,4 +27,4 @@ plugin_packages
 playwright-report
 state.json
 601a87ab7f81cdc9b59e24fbe404210502bc7766
-server/etherpad-lite/node_modules/.pnpm/canvas@2.11.2/node_modules/canvas/build/Release/librsvg-2.so.2
+node_modules/.pnpm/canvas@2.11.2/node_modules/canvas/build/Release/librsvg-2.so.2
