--- a/server/etherpad-lite/package.json
+++ b/server/etherpad-lite/package.json
@@ -13,11 +13,11 @@
     "etherpad-healthcheck": "bin/etherpad-healthcheck"
   },
   "scripts": {
-    "lint": "pnpm --filter ep_etherpad-lite run lint",
+    "lint": "pnpm --filter ep_etherpad-lite run lint && eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "pnpm --filter ep_etherpad-lite run test",
     "test-utils": "pnpm --filter ep_etherpad-lite run test-utils",
     "test-container": "pnpm --filter ep_etherpad-lite run test-container",
-    "dev": "pnpm --filter ep_etherpad-lite run dev",
+    "dev": "pnpm --filter ep_etherpad-lite run dev && vite",
     "prod": "pnpm --filter ep_etherpad-lite run prod",
     "ts-check": "pnpm --filter ep_etherpad-lite run ts-check",
     "ts-check:watch": "pnpm --filter ep_etherpad-lite run ts-check:watch",
@@ -30,16 +30,23 @@
     "remove-plugins": "pnpm --filter bin run remove-plugins",
     "list-plugins": "pnpm --filter bin run list-plugins",
     "build:etherpad": "pnpm --filter admin run build-copy && pnpm --filter ui run build-copy",
-    "build:ui": "pnpm --filter ui run build-copy && pnpm --filter admin run build-copy"
+    "build:ui": "pnpm --filter ui run build-copy && pnpm --filter admin run build-copy",
+    "build": "tsc && vite build",
+    "build-copy": "tsc && vite build --outDir ./src/templates/padEditor --emptyOutDir",
+    "preview": "vite preview"
   },
   "dependencies": {
     "ep_etherpad-lite": "workspace:./src",
-    "flag": "^5.0.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
     "admin": "workspace:./admin",
     "docs": "workspace:./doc",
-    "ui": "workspace:./ui"
+    "flag": "^5.0.1",
+    "ui": "workspace:./ui",
+    "vite": "^5.4.0"
   },
   "engines": {
     "node": ">=18.18.2",
